--- a/package.json
+++ b/package.json
@@ -10,41 +10,43 @@
     "start": "next start"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.11.0",
-    "@tanstack/react-query": "^4.28.0",
-    "@trpc/client": "^10.23.0",
-    "@trpc/next": "^10.23.0",
-    "@trpc/react-query": "^10.23.0",
-    "@trpc/server": "^10.23.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.6.0",
+    "@trpc/client": "^10.44.1",
+    "@trpc/next": "^10.44.1",
+    "@trpc/react-query": "^10.44.1",
+    "@trpc/server": "^10.44.1",
     "classnames": "^2.3.2",
     "fast-deep-equal": "^3.1.3",
-    "jotai": "^2.0.4",
+    "jotai": "^2.6.0",
     "lottie-react": "^2.4.0",
-    "next": "^13.3.2",
-    "next-auth": "^4.21.0",
+    "next": "^14.0.3",
+    "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "superjson": "^1.12.3",
-    "zod": "^3.21.4"
+    "superjson": "^2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.21.3",
-    "@types/node": "^18.16.3",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
-    "eslint-config-next": "^13.3.2",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.6",
-    "prisma": "^4.11.0",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2"
+    "@types/eslint": "^8.44.8",
+    "@types/node": "^20.10.2",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "^18.2.41",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^14.0.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "prisma": "^5.6.0",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.3.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.12.0"
